# Fantasy

./: .clangd  .gitignore  CLAUDE.md  PLAN.md  gradlew  settings.gradle.kts
RenderEngine/: build.gradle.kts
RenderEngine/src/androidTest/java/com/fan/renderengine/: ExampleInstrumentedTest.kt
RenderEngine/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp
RenderEngine/src/main/java/com/fan/renderengine/: RenderEngineBridge.kt
RenderEngine/src/test/java/com/fan/renderengine/: ExampleUnitTest.kt
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/fan/fantasy/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
android/app/src/main/res/values/: themes.xml
android/engine/src/main/cpp/: CMakeLists.txt  EglContext.cpp  EglContext.h  jni_bridge.cpp
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
app/: build.gradle.kts
app/src/androidTest/java/com/fantasy/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/fan/fantasy/: AppNavHost.kt  EditorScreen.kt  MainActivity.kt
app/src/main/java/com/fantasy/: MainActivity.kt
app/src/main/java/com/fantasy/bridge/: NativeBridge.kt
app/src/main/java/com/fantasy/renderer/: FantasyRenderer.kt  LUTPresets.kt
app/src/main/java/com/fantasy/ui/: EditorScreen.kt
app/src/main/java/com/fantasy/viewmodel/: EditorViewModel.kt
app/src/test/java/com/fan/fantasy/: ExampleUnitTest.kt
app/src/test/java/com/fantasy/: ExampleUnitTest.kt
art/: gen_icons.swift
core/: CMakeLists.txt
core/include/: Engine.h
core/include/Common/: Logger.h  Macros.h  Singleton.h
core/include/Render/: CommandQueue.h  Context.h  GL.h  IGLContext.h  RenderThread.h  Renderer.h  ShaderProgram.h  System.h  Texture.h
core/src/: Engine.cpp  placeholder.cpp
core/src/Common/: Logger.cpp
core/src/Render/: CommandQueue.cpp  Context.cpp  EaglContext.mm  EglContext.cpp  RenderThread.cpp  Renderer.cpp  ShaderProgram.cpp  System.cpp  Texture.cpp
docs/superpowers/plans/: 2026-03-19-phase2-filter-framework.md  2026-06-11-fantasy-phase1-image-editor.md
docs/superpowers/specs/: 2026-03-19-phase3-jni-preview-design.md  2026-06-11-fantasy-image-editor-design.md
engine/: build.gradle.kts
engine/src/main/cpp/: CMakeLists.txt  EglContext.cpp  EglContext.h  jni_bridge.cpp
engine/src/main/java/com/fan/engine/: EngineBridge.kt  RenderSurfaceView.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
ios/: .gitignore  project.yml  verify.sh
ios/App/: EditorView.swift  FantasyApp.swift  GLViewRepresentable.swift  HomeView.swift  UIImage+RGBA.swift
ios/App/Assets.xcassets/ref-bg.imageset/: Contents.json
ios/Bridge/: EaglContext.h  EaglContext.mm  EngineBridge.h  EngineBridge.mm  Fantasy-Bridging-Header.h  FantasyGLView.h  FantasyGLView.mm
native/: CMakeLists.txt
native/bridge/: CMakeLists.txt
native/bridge/include/bridge/: RenderSession.h
native/bridge/src/: NativeBridge.cpp  RenderSession.cpp
native/filter/: CMakeLists.txt
native/filter/include/filter/: Filter.h  FilterChain.h  FilterParam.h
native/filter/include/filter/filters/: BlurFilter.h  BrightnessFilter.h  ContrastFilter.h  CropRotateFilter.h  LUTFilter.h  SaturationFilter.h  SharpenFilter.h  VignetteFilter.h
native/filter/src/: Filter.cpp  FilterChain.cpp
native/filter/src/filters/: BlurFilter.cpp  BrightnessFilter.cpp  ContrastFilter.cpp  CropRotateFilter.cpp  LUTFilter.cpp  SaturationFilter.cpp  SharpenFilter.cpp  VignetteFilter.cpp
native/rhi/: CMakeLists.txt
native/rhi/include/rhi/: EGLHelper.h  Log.h  RHIFramebuffer.h  RHIRenderer.h  RHIShader.h  RHITexture.h  RHIUniformSet.h  RHIVertexBuffer.h  RHIVertexLayout.h
native/rhi/src/gles/: GLFramebuffer.cpp  GLFramebuffer.h  GLRenderer.cpp  GLRenderer.h  GLShader.cpp  GLShader.h  GLTexture.cpp  GLTexture.h  GLVertexBuffer.cpp  GLVertexBuffer.h
(+20 files in other folders)
